// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Save Notification Render a multi save email 1`] = `
"<html><div><div>
          <!--[if gte mso 15]>
            <xml>
              <o:OfficeDocumentSettings>
                <o:AllowPNG />
                <o:PixelsPerInch>96</o:PixelsPerInch>
              </o:OfficeDocumentSettings>
            </xml>
          <![endif]-->
      </div><meta charSet="UTF-8"/><meta http-equiv="x-ua-compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1"/><meta name="x-apple-disable-message-reformatting"/><title>Daily Email - joey@audius.co</title><style type="text/css">
    @font-face {
      font-family: 'Avenir Next LT Pro';
      font-style: normal;
      font-weight: 100;
      src: url(https://download.audius.co/fonts/AvenirNextLTPro-UltLt.ttf) format("truetype"), url(https://download.audius.co/fonts/AvenirNextLTPro-UltLt.otf) format("opentype");
    }

    @font-face {
      font-family: 'Avenir Next LT Pro';
      font-style: normal;
      font-weight: 400;
      src: url(https://download.audius.co/fonts/AvenirNextLTPro-Regular.ttf) format("truetype"), url(https://download.audius.co/fonts/AvenirNextLTPro-Regular.otf) format("opentype");
    }

    @font-face {
      font-family: 'Avenir Next LT Pro';
      font-style: normal;
      font-weight: 500;
      src: url(https://download.audius.co/fonts/AvenirNextLTPro-Medium.ttf) format("truetype"), url(https://download.audius.co/fonts/AvenirNextLTPro-Medium.otf) format("opentype");
    }

    @font-face {
      font-family: 'Avenir Next LT Pro';
      font-style: normal;
      font-weight: 600;
      src: url(https://download.audius.co/fonts/AvenirNextLTPro-Demi-Bold.ttf) format("truetype"), url(https://download.audius.co/fonts/AvenirNextLTPro-Demi-Bold.otf) format("opentype");
    }

    @font-face {
      font-family: 'Avenir Next LT Pro';
      font-style: normal;
      font-weight: 700;
      src: url(https://download.audius.co/fonts/AvenirNextLTPro-Bold.ttf) format("truetype"), url(https://download.audius.co/fonts/AvenirNextLTPro-Bold.otf) format("opentype");
    }

    @font-face {
      font-family: 'Avenir Next LT Pro';
      font-style: normal;
      font-weight: 900;
      src: url(https://download.audius.co/fonts/AvenirNextLTPro-Heavy.ttf) format("truetype"), url(https://download.audius.co/fonts/AvenirNextLTPro-Heavy.otf) format("opentype");
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 950;
      src: url(https://download.audius.co/fonts/Gilroy-Black.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Black.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 900;
      src: url(https://download.audius.co/fonts/Gilroy-Heavy.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Heavy.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 800;
      src: url(https://download.audius.co/fonts/Gilroy-ExtraBold.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-ExtraBold.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 700;
      src: url(https://download.audius.co/fonts/Gilroy-Bold.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Bold.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 600;
      src: url(https://download.audius.co/fonts/Gilroy-SemiBold.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-SemiBold.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 500;
      src: url(https://download.audius.co/fonts/Gilroy-Medium.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Medium.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 400;
      src: url(https://download.audius.co/fonts/Gilroy-Regular.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Regular.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 300;
      src: url(https://download.audius.co/fonts/Gilroy-Light.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Light.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 200;
      src: url(https://download.audius.co/fonts/Gilroy-UltraLight.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-UltraLight.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 100;
      src: url(https://download.audius.co/fonts/Gilroy-Thin.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Thin.otf) format('opentype')
    }

    .gilroy { 
      font-family: 'Gilroy';
    }
    .avenir {
      font-family: 'Avenir Next LT Pro';
    }

</style><style type="text/css">
    html {
      margin: 0;
      padding: 0;
    }

    body {
      margin: 0;
      padding: 0;
    }

    p {
      margin: 1em 0;
      padding: 0;
    }

    a {
      color: #8F2CE8;
    }

    table {
      border-collapse: collapse;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      display: block;
      margin: 0;
      padding: 0;
    }

    img,
    a img {
      border: 0;
      height: auto;
      outline: none;
      text-decoration: none;
    }

    h2 {
      color: #858199;
      font-size: 32px;
      font-weight: bold;
      letter-spacing: .02px;
      text-align: center;
      margin: 0 auto;
    }

    h3 {
      color: #C3C0CC;
      font-size: 16px;
      font-weight: bold;
      letter-spacing: .02px;
      line-height: 25px;
      text-align: center;
      /* margin-bottom: 10px; */
    }

    .pink {
      color: #E000DB;
    }

    .purple {
      color: #7E1BCC;
    }

    body,
    #bodyTable,
    #bodyCell {
      margin: 0;
      padding: 0;
      width: 100%;
      background: #FFFFFF;
      font-family: "Avenir Next LT Pro", Helvetica, Arial, sans-serif;
    }

    #outlook a {
      padding: 0;
    }

    img {
      -ms-interpolation-mode: bicubic;
    }

    table {
      mso-table-lspace: 0;
      mso-table-rspace: 0;
    }

    .ReadMsgBody {
      width: 100%;
    }

    .ExternalClass {
      width: 100%;
    }

    p,
    a,
    li,
    td,
    blockquote {
      mso-line-height-rule: exactly;
    }

    p,
    a,
    li,
    td,
    body,
    table,
    blockquote {
      -ms-text-size-adjust: 100%;
      -webkit-text-size-adjust: 100%;
    }

    .button {
      background: #E000DB;
      font-size: 24px !important;
      color: #FFFFFF !important;
      font-weight: 700 !important;
      letter-spacing: 0.03px !important;
      text-decoration: none !important;
      user-select: none;
      cursor: pointer;
      line-height: 29px;
      border-radius: 8px;
      text-align: center;
      display: inline-block;
      padding: 16px 32px;
    }

    .ExternalClass,
    .ExternalClass p,
    .ExternalClass td,
    .ExternalClass div,
    .ExternalClass span,
    .ExternalClass font {
      line-height: 100%;
    }

    .templateImage {
      height: auto;
      max-width: 564px;
    }

    #footerContent {
      padding-top: 27px;
      padding-bottom: 18px;
    }

    #templateBody {
      padding-right: 94px;
      padding-left: 94px;
    }

    .notificationsContainer {
      max-width: 396px;
      margin-bottom: 32px;
    }
      
    .seeMoreOnAudius {
      padding: 8px 24px;
      border-radius: 17px;
      background-color: #7E1BCC;
      margin-bottom: 0px auto 32px;
    color: #FFFFFF;
    font-family: "Avenir Next LT Pro";
    font-size: 14px;
    font-weight: bold;
    letter-spacing: 0.15px;
    text-align: center;
    }

      
    .footerContainer {
      width: 100%;
    }

    .footerContainer table {
      table-layout: fixed;
    }

    #templateHeader {
      background-color: #FFFFFF;
      background-image: none;
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
      border-top: 0;
      border-bottom: 0;
      padding-bottom: 0;
      border-radius: 8px 8px 0px 0px;
    }

    #templateHeader a,
    #templateHeader p a {
      color: #237A91;
      font-weight: normal;
      text-decoration: underline;
    }

    #templateBody {
      background-color: #FFFFFF;
      margin-bottom: 44px;
      padding-bottom: 36px;
      height: 100%;
      width: 100%;
      max-width: 720px;
      border-radius: 0 0 8px 8px;
      box-shadow: 0 16px 20px 0 rgba(232, 228, 234, 0.5);
    }

    #templateBody,
    #templateBody p {
      color: #858199;
      font-size: 18px;
      letter-spacing: .02px;
      line-height: 25px;
      text-align: center;
    }

    #templateBody a,
    #templateBody p a {
      color: #7E1BCC;
      font-weight: normal;
      text-decoration: underline;
    }

    #templateFooter {
      border-top: 1px solid #DAD9E0;
      width: 100%;
      padding: 0;
      background-color: #fbfbfc;
    }

    #socialBar img {
      height: 24px;
      width: 24px;
      padding: 0 20px;
    }
    #socialBar a:first-child img {
      padding: 0 20px 0 0;
    }

    #socialBar,
    #socialBar p {
      color: #C2C0CC;
      font-size: 16px;
      font-weight: bold;
      letter-spacing: .2px;
      text-align: center;
    }

    #templateFooter,
    #templateFooter p {
      color: #858199;
      font-family: "Gilroy", "Avenir Next LT Pro", Helvetica, Arial, sans-serif;
      font-size: 14px;
      line-height: 20px;
      text-align: center;
    }

    #templateFooter a,
    #templateFooter p a {
      vertical-align: bottom;
      color: #656565;
      font-weight: normal;
      text-decoration: underline;
    }

    #utilityBar {
      border: 0;
      padding-top: 9px;
      padding-bottom: 9px;
    }

    #utilityBar,
    #utilityBar p {
      color: #C2C0CC;
      font-size: 12px;
      line-height: 150%;
      text-align: center;
    }

    #utilityBar a,
    #utilityBar p a {
      color: #C2C0CC;
      font-weight: normal;
      text-decoration: underline;
    }

    .arrowIcon {
      height:8px;
      width:8px;
      margin-left:4px;
      display:inline-block;
      opacity: 0.5;
    }

    .arrowIcon path {
      fill: #858199;
    }

    @media (max-width: 720px) {

      body,
      table,
      td,
      p,
      a,
      li,
      blockquote {
        -webkit-text-size-adjust: none !important;
      }
    }

    @media (max-width: 720px) {
      .button {
        padding: 16px 24px;
      }
    }

    @media (max-width: 720px) {
      body {
        width: 100% !important;
        min-width: 100% !important;
      }
    }

    @media (max-width: 720px) {
      .templateImage {
        width: 100% !important;
      }
    }

    @media (max-width: 720px) {
      .columnContainer {
        max-width: 100% !important;
        width: 100% !important;
      }
    }

    @media (max-width: 720px) {
      .mobileHide {
        display: none;
      }
    }

    @media (max-width: 720px) {
      .utilityLink {
        display: block;
        padding: 9px 0;
      }
    }

    @media (max-width: 720px) {
      h1 {
        font-size: 22px !important;
        line-height: 175% !important;
      }
    }

    @media (max-width: 720px) {
      h4 {
        font-size: 16px !important;
        line-height: 175% !important;
      }
    }

    @media (max-width: 720px) {
      p {
        font-size: 16px !important;
      }
    }

    @media (max-width: 720px) {

      #templateHeader,
      #templateHeader p {
        font-size: 16px !important;
        line-height: 150% !important;
      }
    }

    @media (max-width: 720px) {
      #bodyCell {
        text-align: center;
      }
    }

    @media (max-width: 720px) {
      .templateContainer {
        display: table !important;
        max-width: 384px !important;
        width: 80% !important;
        margin-left: auto !important;
        margin-right: auto !important;
      }
    }

    @media (max-width: 720px) {
      #templateBody {
        padding-right: 13px !important;
        padding-left: 13px !important;
      }
    }

    @media (max-width: 720px) {

      #templateBody,
      #templateBody p {
        font-size: 16px !important;
        line-height: 150% !important;
      }
    }

    @media (max-width: 720px) {
      .footerContainer table td {
        /* display: block; */
      }
    }

    @media (max-width: 720px) {

      #templateFooter,
      #templateFooter p {
        font-size: 14px !important;
        line-height: 150% !important;
      }
    }

    @media (max-width: 720px) {

      #socialBar,
      #socialBar p {
        font-size: 14px !important;
        line-height: 150% !important;
      }
    }

    @media (max-width: 720px) {

      #utilityBar,
      #utilityBar p {
        font-size: 14px !important;
        line-height: 150% !important;
      }
    }
  </style></div><body bgcolor="#FFFFFF" style="background-color:#FFFFFF"><p style="display:none;font-size:1px;color:#333333;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden">user_2 favorited your track track_title_10
        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
        <wbr>
        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
        <wbr>
        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
        <wbr>
        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
        <wbr>
        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
        <wbr>
        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
        </p><center><table align="center" border="0" cellPadding="0" cellSpacing="0" width="100%" id="bodyTable" bgcolor="#FFFFFF" style="background-color:#FFFFFF"><tr><td align="center" valign="top" id="bodyCell"><img src="https://gallery.mailchimp.com/f351897a27ff0a641b8acd9ab/images/b1070e55-9487-4acb-abce-e755484cce46.png" style="max-width:240px;margin:27px auto" alt="Audius Logo"/></td></tr><tr><td align="center" valign="top" id="bodyCell"><img src="https://download.audius.co/static-resources/email/whatYouMissed.png" style="max-width:490px;margin:0px auto 7px" alt="What You Missed"/></td></tr><tr><td align="center" valign="top" id="bodyCell"><p class="avenir" style="color:rgba(133,129,153,0.5);font-size:16px;font-weight:500;letter-spacing:0.02px;text-align:center;margin:0px auto 24px">4 unread notifications from May 13th 2020</p></td></tr><tr><td align="center" valign="top" id="bodyCell" style="border-radius:4px;max-width:396px;margin-bottom:32px"><table border="0" cellPadding="0" cellSpacing="0" style="border-collapse:separate;border:1px solid rgba(133,129,153,0.2);border-color:rgba(133,129,153,0.2);border-radius:4px;height:auto;width:100%;max-width:396px;margin-bottom:8px"><tr><td><a href="https://audius.co/feed?openNotifications=true" style="text-decoration:none"><table border="0" cellPadding="0" cellSpacing="0" style="border-collapse:separate;height:auto;width:100%"><tr><td colSpan="12" valign="center" style="padding:16px 16px 0px;padding-top:16px;border-radius:4px"><table align="center" border="0" width="100%" cellPadding="0" cellSpacing="0" style="margin:0px;padding:0px"><tr><td valign="top" class="headerNotification" height="100%" width="100%" style="padding:0px 0px 12px 0px;border-bottom:1px solid #F2F2F4"><table align="center" border="0" cellPadding="0" cellSpacing="0" style="margin:0px;padding:0px"><tr><td colSpan="1"><img src="" style="height:32px;width:32px;border-radius:50%;margin-right:5px" alt="user_2" title="user_2"/></td><td colSpan="1"><img src="" style="height:32px;width:32px;border-radius:50%;margin-right:5px" alt="user_3" title="user_3"/></td><td colSpan="1"><img src="" style="height:32px;width:32px;border-radius:50%;margin-right:5px" alt="user_4" title="user_4"/></td><td colSpan="1"><img src="" style="height:32px;width:32px;border-radius:50%;margin-right:5px" alt="user_5" title="user_5"/></td></tr></table></td></tr></table></td></tr><tr><td colSpan="12" valign="center" style="padding:12px 16px 8px;padding-left:16px;padding-top:16px;width:100%"><span class="notificationText"><span class="avenir" style="color:#7E1BCC;font-size:14px;font-weight:500">user_2</span><span class="avenir undefined" style="color:#858199;font-size:14px;font-weight:500"> and 3 others</span><span class="avenir undefined" style="color:#858199;font-size:14px;font-weight:500"> favorited your </span> <span class="avenir undefined" style="color:#858199;font-size:14px;font-weight:500">track </span><span class="avenir" style="color:#7E1BCC;font-size:14px;font-weight:500">track_title_10</span> </span></td></tr><tr><td valign="center" colSpan="12" style="padding:0px 16px 14px"><a class="avenir" style="width:337px;color:#C2C0CC;font-size:12px;font-weight:600;line-height:10px">Open Audius<img src="https://download.audius.co/static-resources/email/iconArrow.png" style="height:8px;width:8px;margin-left:4px;display:inline-block" alt="Arrow Right" titile="Arrow Right" class="arrowIcon"/></a></td></tr></table></a></td></tr></table></td></tr><tr><td align="center" valign="top" id="bodyCell" style="padding:24px 0px 32px;width:100%"><table cellSpacing="0" cellPadding="0" style="margin:0px auto"><tr><td style="border-radius:17px;margin:0px auto" bgcolor="#7E1BCC"><a href="https://audius.co/feed?openNotifications=true" target="_blank" style="padding:8px 24px;font-size:14px;color:#ffffff;text-decoration:none;font-weight:bold;display:inline-block">See more on Audius</a></td></tr></table></td></tr><tr><td style="padding-bottom:25px"><table border="0" cellPadding="0" cellSpacing="0" style="margin:0px auto;height:auto;padding-botton:25px"><tr><td valign="center" id="socialBar" style="text-align:center;padding:25px 0px 20px"><a href="https://www.instagram.com/audiusmusic/"><img src="https://download.audius.co/static-resources/email/iconInsta.png" alt="instagram" style="height:24px;width:24px;padding:0px 24px"/></a><a href="https://twitter.com/audius"><img src="https://download.audius.co/static-resources/email/iconTwitter.png" alt="twitter" style="height:24px;width:24px;padding:0px 24px"/></a><a href="https://discordapp.com/invite/yNUg2e2"><img src="https://download.audius.co/static-resources/email/iconDiscord.png" alt="discord" style="height:24px;width:24px;padding:0px 24px"/></a></td></tr><tr><td valign="center" style="text-align:center;padding:0px 0px 8px;margin:0px"><div class="gilroy" style="text-align:center;color:#858199;font-size:14px">Made with <span style="color:#7E1BCC">♥︎</span> in SF &amp; LA</div></td></tr><tr><td style="text-align:center;vertical-align:center;height:auto;padding:0px 0px 12px;margin:0px"><div class="gilroy" style="text-align:center;color:#858199;font-size:14px">© <!-- -->2024<!-- --> Audius, Inc. All Rights Reserved.</div></td></tr><tr><td valign="top" id="utilityBar"><div class="gilroy" style="text-align:center;color:#858199;font-size:14px">Tired of seeing these emails? <a href="https://audius.co/settings" class="utilityLink" style="text-decoration-color:#858199"><span style="color:#858199">Update your notification preferences</span></a><span class="mobileHide"></span></div></td></tr></table></td></tr></table></center></body></html>"
`;

exports[`Save Notification Render a single email 1`] = `
"<html><div><div>
          <!--[if gte mso 15]>
            <xml>
              <o:OfficeDocumentSettings>
                <o:AllowPNG />
                <o:PixelsPerInch>96</o:PixelsPerInch>
              </o:OfficeDocumentSettings>
            </xml>
          <![endif]-->
      </div><meta charSet="UTF-8"/><meta http-equiv="x-ua-compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1"/><meta name="x-apple-disable-message-reformatting"/><title>Daily Email - joey@audius.co</title><style type="text/css">
    @font-face {
      font-family: 'Avenir Next LT Pro';
      font-style: normal;
      font-weight: 100;
      src: url(https://download.audius.co/fonts/AvenirNextLTPro-UltLt.ttf) format("truetype"), url(https://download.audius.co/fonts/AvenirNextLTPro-UltLt.otf) format("opentype");
    }

    @font-face {
      font-family: 'Avenir Next LT Pro';
      font-style: normal;
      font-weight: 400;
      src: url(https://download.audius.co/fonts/AvenirNextLTPro-Regular.ttf) format("truetype"), url(https://download.audius.co/fonts/AvenirNextLTPro-Regular.otf) format("opentype");
    }

    @font-face {
      font-family: 'Avenir Next LT Pro';
      font-style: normal;
      font-weight: 500;
      src: url(https://download.audius.co/fonts/AvenirNextLTPro-Medium.ttf) format("truetype"), url(https://download.audius.co/fonts/AvenirNextLTPro-Medium.otf) format("opentype");
    }

    @font-face {
      font-family: 'Avenir Next LT Pro';
      font-style: normal;
      font-weight: 600;
      src: url(https://download.audius.co/fonts/AvenirNextLTPro-Demi-Bold.ttf) format("truetype"), url(https://download.audius.co/fonts/AvenirNextLTPro-Demi-Bold.otf) format("opentype");
    }

    @font-face {
      font-family: 'Avenir Next LT Pro';
      font-style: normal;
      font-weight: 700;
      src: url(https://download.audius.co/fonts/AvenirNextLTPro-Bold.ttf) format("truetype"), url(https://download.audius.co/fonts/AvenirNextLTPro-Bold.otf) format("opentype");
    }

    @font-face {
      font-family: 'Avenir Next LT Pro';
      font-style: normal;
      font-weight: 900;
      src: url(https://download.audius.co/fonts/AvenirNextLTPro-Heavy.ttf) format("truetype"), url(https://download.audius.co/fonts/AvenirNextLTPro-Heavy.otf) format("opentype");
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 950;
      src: url(https://download.audius.co/fonts/Gilroy-Black.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Black.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 900;
      src: url(https://download.audius.co/fonts/Gilroy-Heavy.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Heavy.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 800;
      src: url(https://download.audius.co/fonts/Gilroy-ExtraBold.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-ExtraBold.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 700;
      src: url(https://download.audius.co/fonts/Gilroy-Bold.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Bold.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 600;
      src: url(https://download.audius.co/fonts/Gilroy-SemiBold.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-SemiBold.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 500;
      src: url(https://download.audius.co/fonts/Gilroy-Medium.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Medium.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 400;
      src: url(https://download.audius.co/fonts/Gilroy-Regular.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Regular.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 300;
      src: url(https://download.audius.co/fonts/Gilroy-Light.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Light.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 200;
      src: url(https://download.audius.co/fonts/Gilroy-UltraLight.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-UltraLight.otf) format('opentype')
    }

    @font-face {
      font-family: 'Gilroy';
      font-style: normal;
      font-weight: 100;
      src: url(https://download.audius.co/fonts/Gilroy-Thin.ttf) format('truetype'), url(https://download.audius.co/fonts/Gilroy-Thin.otf) format('opentype')
    }

    .gilroy { 
      font-family: 'Gilroy';
    }
    .avenir {
      font-family: 'Avenir Next LT Pro';
    }

</style><style type="text/css">
    html {
      margin: 0;
      padding: 0;
    }

    body {
      margin: 0;
      padding: 0;
    }

    p {
      margin: 1em 0;
      padding: 0;
    }

    a {
      color: #8F2CE8;
    }

    table {
      border-collapse: collapse;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      display: block;
      margin: 0;
      padding: 0;
    }

    img,
    a img {
      border: 0;
      height: auto;
      outline: none;
      text-decoration: none;
    }

    h2 {
      color: #858199;
      font-size: 32px;
      font-weight: bold;
      letter-spacing: .02px;
      text-align: center;
      margin: 0 auto;
    }

    h3 {
      color: #C3C0CC;
      font-size: 16px;
      font-weight: bold;
      letter-spacing: .02px;
      line-height: 25px;
      text-align: center;
      /* margin-bottom: 10px; */
    }

    .pink {
      color: #E000DB;
    }

    .purple {
      color: #7E1BCC;
    }

    body,
    #bodyTable,
    #bodyCell {
      margin: 0;
      padding: 0;
      width: 100%;
      background: #FFFFFF;
      font-family: "Avenir Next LT Pro", Helvetica, Arial, sans-serif;
    }

    #outlook a {
      padding: 0;
    }

    img {
      -ms-interpolation-mode: bicubic;
    }

    table {
      mso-table-lspace: 0;
      mso-table-rspace: 0;
    }

    .ReadMsgBody {
      width: 100%;
    }

    .ExternalClass {
      width: 100%;
    }

    p,
    a,
    li,
    td,
    blockquote {
      mso-line-height-rule: exactly;
    }

    p,
    a,
    li,
    td,
    body,
    table,
    blockquote {
      -ms-text-size-adjust: 100%;
      -webkit-text-size-adjust: 100%;
    }

    .button {
      background: #E000DB;
      font-size: 24px !important;
      color: #FFFFFF !important;
      font-weight: 700 !important;
      letter-spacing: 0.03px !important;
      text-decoration: none !important;
      user-select: none;
      cursor: pointer;
      line-height: 29px;
      border-radius: 8px;
      text-align: center;
      display: inline-block;
      padding: 16px 32px;
    }

    .ExternalClass,
    .ExternalClass p,
    .ExternalClass td,
    .ExternalClass div,
    .ExternalClass span,
    .ExternalClass font {
      line-height: 100%;
    }

    .templateImage {
      height: auto;
      max-width: 564px;
    }

    #footerContent {
      padding-top: 27px;
      padding-bottom: 18px;
    }

    #templateBody {
      padding-right: 94px;
      padding-left: 94px;
    }

    .notificationsContainer {
      max-width: 396px;
      margin-bottom: 32px;
    }
      
    .seeMoreOnAudius {
      padding: 8px 24px;
      border-radius: 17px;
      background-color: #7E1BCC;
      margin-bottom: 0px auto 32px;
    color: #FFFFFF;
    font-family: "Avenir Next LT Pro";
    font-size: 14px;
    font-weight: bold;
    letter-spacing: 0.15px;
    text-align: center;
    }

      
    .footerContainer {
      width: 100%;
    }

    .footerContainer table {
      table-layout: fixed;
    }

    #templateHeader {
      background-color: #FFFFFF;
      background-image: none;
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
      border-top: 0;
      border-bottom: 0;
      padding-bottom: 0;
      border-radius: 8px 8px 0px 0px;
    }

    #templateHeader a,
    #templateHeader p a {
      color: #237A91;
      font-weight: normal;
      text-decoration: underline;
    }

    #templateBody {
      background-color: #FFFFFF;
      margin-bottom: 44px;
      padding-bottom: 36px;
      height: 100%;
      width: 100%;
      max-width: 720px;
      border-radius: 0 0 8px 8px;
      box-shadow: 0 16px 20px 0 rgba(232, 228, 234, 0.5);
    }

    #templateBody,
    #templateBody p {
      color: #858199;
      font-size: 18px;
      letter-spacing: .02px;
      line-height: 25px;
      text-align: center;
    }

    #templateBody a,
    #templateBody p a {
      color: #7E1BCC;
      font-weight: normal;
      text-decoration: underline;
    }

    #templateFooter {
      border-top: 1px solid #DAD9E0;
      width: 100%;
      padding: 0;
      background-color: #fbfbfc;
    }

    #socialBar img {
      height: 24px;
      width: 24px;
      padding: 0 20px;
    }
    #socialBar a:first-child img {
      padding: 0 20px 0 0;
    }

    #socialBar,
    #socialBar p {
      color: #C2C0CC;
      font-size: 16px;
      font-weight: bold;
      letter-spacing: .2px;
      text-align: center;
    }

    #templateFooter,
    #templateFooter p {
      color: #858199;
      font-family: "Gilroy", "Avenir Next LT Pro", Helvetica, Arial, sans-serif;
      font-size: 14px;
      line-height: 20px;
      text-align: center;
    }

    #templateFooter a,
    #templateFooter p a {
      vertical-align: bottom;
      color: #656565;
      font-weight: normal;
      text-decoration: underline;
    }

    #utilityBar {
      border: 0;
      padding-top: 9px;
      padding-bottom: 9px;
    }

    #utilityBar,
    #utilityBar p {
      color: #C2C0CC;
      font-size: 12px;
      line-height: 150%;
      text-align: center;
    }

    #utilityBar a,
    #utilityBar p a {
      color: #C2C0CC;
      font-weight: normal;
      text-decoration: underline;
    }

    .arrowIcon {
      height:8px;
      width:8px;
      margin-left:4px;
      display:inline-block;
      opacity: 0.5;
    }

    .arrowIcon path {
      fill: #858199;
    }

    @media (max-width: 720px) {

      body,
      table,
      td,
      p,
      a,
      li,
      blockquote {
        -webkit-text-size-adjust: none !important;
      }
    }

    @media (max-width: 720px) {
      .button {
        padding: 16px 24px;
      }
    }

    @media (max-width: 720px) {
      body {
        width: 100% !important;
        min-width: 100% !important;
      }
    }

    @media (max-width: 720px) {
      .templateImage {
        width: 100% !important;
      }
    }

    @media (max-width: 720px) {
      .columnContainer {
        max-width: 100% !important;
        width: 100% !important;
      }
    }

    @media (max-width: 720px) {
      .mobileHide {
        display: none;
      }
    }

    @media (max-width: 720px) {
      .utilityLink {
        display: block;
        padding: 9px 0;
      }
    }

    @media (max-width: 720px) {
      h1 {
        font-size: 22px !important;
        line-height: 175% !important;
      }
    }

    @media (max-width: 720px) {
      h4 {
        font-size: 16px !important;
        line-height: 175% !important;
      }
    }

    @media (max-width: 720px) {
      p {
        font-size: 16px !important;
      }
    }

    @media (max-width: 720px) {

      #templateHeader,
      #templateHeader p {
        font-size: 16px !important;
        line-height: 150% !important;
      }
    }

    @media (max-width: 720px) {
      #bodyCell {
        text-align: center;
      }
    }

    @media (max-width: 720px) {
      .templateContainer {
        display: table !important;
        max-width: 384px !important;
        width: 80% !important;
        margin-left: auto !important;
        margin-right: auto !important;
      }
    }

    @media (max-width: 720px) {
      #templateBody {
        padding-right: 13px !important;
        padding-left: 13px !important;
      }
    }

    @media (max-width: 720px) {

      #templateBody,
      #templateBody p {
        font-size: 16px !important;
        line-height: 150% !important;
      }
    }

    @media (max-width: 720px) {
      .footerContainer table td {
        /* display: block; */
      }
    }

    @media (max-width: 720px) {

      #templateFooter,
      #templateFooter p {
        font-size: 14px !important;
        line-height: 150% !important;
      }
    }

    @media (max-width: 720px) {

      #socialBar,
      #socialBar p {
        font-size: 14px !important;
        line-height: 150% !important;
      }
    }

    @media (max-width: 720px) {

      #utilityBar,
      #utilityBar p {
        font-size: 14px !important;
        line-height: 150% !important;
      }
    }
  </style></div><body bgcolor="#FFFFFF" style="background-color:#FFFFFF"><p style="display:none;font-size:1px;color:#333333;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden">user_2 favorited your track track_title_10
        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
        <wbr>
        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
        <wbr>
        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
        <wbr>
        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
        <wbr>
        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
        <wbr>
        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
        </p><center><table align="center" border="0" cellPadding="0" cellSpacing="0" width="100%" id="bodyTable" bgcolor="#FFFFFF" style="background-color:#FFFFFF"><tr><td align="center" valign="top" id="bodyCell"><img src="https://gallery.mailchimp.com/f351897a27ff0a641b8acd9ab/images/b1070e55-9487-4acb-abce-e755484cce46.png" style="max-width:240px;margin:27px auto" alt="Audius Logo"/></td></tr><tr><td align="center" valign="top" id="bodyCell"><img src="https://download.audius.co/static-resources/email/whatYouMissed.png" style="max-width:490px;margin:0px auto 7px" alt="What You Missed"/></td></tr><tr><td align="center" valign="top" id="bodyCell"><p class="avenir" style="color:rgba(133,129,153,0.5);font-size:16px;font-weight:500;letter-spacing:0.02px;text-align:center;margin:0px auto 24px">1 unread notification from May 13th 2020</p></td></tr><tr><td align="center" valign="top" id="bodyCell" style="border-radius:4px;max-width:396px;margin-bottom:32px"><table border="0" cellPadding="0" cellSpacing="0" style="border-collapse:separate;border:1px solid rgba(133,129,153,0.2);border-color:rgba(133,129,153,0.2);border-radius:4px;height:auto;width:100%;max-width:396px;margin-bottom:8px"><tr><td><a href="https://audius.co/feed?openNotifications=true" style="text-decoration:none"><table border="0" cellPadding="0" cellSpacing="0" style="border-collapse:separate;height:auto;width:100%"><tr><td colSpan="1" valign="center" style="padding:12px 0px 8px 16px;width:60px"><img style="height:32px;width:32px;border-radius:50%"/></td><td colSpan="11" valign="center" style="padding:12px 16px 8px;padding-left:12px;padding-top:12px;width:100%"><span class="notificationText"><span class="avenir" style="color:#7E1BCC;font-size:14px;font-weight:500">user_2</span><span class="avenir undefined" style="color:#858199;font-size:14px;font-weight:500"> favorited your </span> <span class="avenir undefined" style="color:#858199;font-size:14px;font-weight:500">track </span><span class="avenir" style="color:#7E1BCC;font-size:14px;font-weight:500">track_title_10</span> </span></td></tr><tr><td valign="center" colSpan="12" style="padding:0px 16px 14px"><a class="avenir" style="width:337px;color:#C2C0CC;font-size:12px;font-weight:600;line-height:10px">Open Audius<img src="https://download.audius.co/static-resources/email/iconArrow.png" style="height:8px;width:8px;margin-left:4px;display:inline-block" alt="Arrow Right" titile="Arrow Right" class="arrowIcon"/></a></td></tr></table></a></td></tr></table></td></tr><tr><td align="center" valign="top" id="bodyCell" style="padding:24px 0px 32px;width:100%"><table cellSpacing="0" cellPadding="0" style="margin:0px auto"><tr><td style="border-radius:17px;margin:0px auto" bgcolor="#7E1BCC"><a href="https://audius.co/feed?openNotifications=true" target="_blank" style="padding:8px 24px;font-size:14px;color:#ffffff;text-decoration:none;font-weight:bold;display:inline-block">See more on Audius</a></td></tr></table></td></tr><tr><td style="padding-bottom:25px"><table border="0" cellPadding="0" cellSpacing="0" style="margin:0px auto;height:auto;padding-botton:25px"><tr><td valign="center" id="socialBar" style="text-align:center;padding:25px 0px 20px"><a href="https://www.instagram.com/audiusmusic/"><img src="https://download.audius.co/static-resources/email/iconInsta.png" alt="instagram" style="height:24px;width:24px;padding:0px 24px"/></a><a href="https://twitter.com/audius"><img src="https://download.audius.co/static-resources/email/iconTwitter.png" alt="twitter" style="height:24px;width:24px;padding:0px 24px"/></a><a href="https://discordapp.com/invite/yNUg2e2"><img src="https://download.audius.co/static-resources/email/iconDiscord.png" alt="discord" style="height:24px;width:24px;padding:0px 24px"/></a></td></tr><tr><td valign="center" style="text-align:center;padding:0px 0px 8px;margin:0px"><div class="gilroy" style="text-align:center;color:#858199;font-size:14px">Made with <span style="color:#7E1BCC">♥︎</span> in SF &amp; LA</div></td></tr><tr><td style="text-align:center;vertical-align:center;height:auto;padding:0px 0px 12px;margin:0px"><div class="gilroy" style="text-align:center;color:#858199;font-size:14px">© <!-- -->2024<!-- --> Audius, Inc. All Rights Reserved.</div></td></tr><tr><td valign="top" id="utilityBar"><div class="gilroy" style="text-align:center;color:#858199;font-size:14px">Tired of seeing these emails? <a href="https://audius.co/settings" class="utilityLink" style="text-decoration-color:#858199"><span style="color:#858199">Update your notification preferences</span></a><span class="mobileHide"></span></div></td></tr></table></td></tr></table></center></body></html>"
`;
